[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "patch-denoiser"
version = "0.0.1"
authors = [
  { name="Alberto Di Biase", email="adibiase@ic.ac.uk" },
]
description = "Multichannel patch denoising for DWI images"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]


dependencies = [
    "numpy",
    "scipy",
    "numba",
    "rocket-fft",
    "tqdm",
    "numba-progress",
    "PyWavelets",
    "ipywidgets",
    "bm4d",
    "bm3d"
]

# [project.urls]
# Homepage = "https://github.com/pypa/sampleproject"
# Issues = "https://github.com/pypa/sampleproject/issues"
